--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
 
   <body>
-    <div class="container">
+    <main class="container">
       <div class="testimonials">
         <div class="testimonials__grid">
           <div class="testimonials__box">
@@ -164,10 +164,10 @@
           </div>
         </div>
       </div>
-      <footer class="footer">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" class="footer__link">Frontend Mentor</a>. 
-        Coded by <a href="#" class="footer__link">Joaquin Trivel Mera</a>.
-      </footer>
-    </div>
+    </main>
+    <footer class="footer">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" class="footer__link">Frontend Mentor</a>. 
+      Coded by <a href="#" class="footer__link">Joaquin Trivel Mera</a>.
+    </footer>
   </body>
 </html>
