--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
               </div>
             </div>
             <div class="testimonials__bottom">
-              <p class="testimonials__heading">
+              <h1 class="testimonials__heading">
                 I received a job offer mid-course, and the subjects I learned
                 were current, if not more so, in the company I joined. I
                 honestly feel I got every penny’s worth.
-              </p>
+              </h1>
               <p class="testimonials__text">
                 “ I was an EMT for many years before I joined the bootcamp. I’ve
                 been looking to make a transition and have heard some people who
